--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </main>
 
       <footer>
-
+        <img src="https://via.placeholder.com/960x200/ddd?text=footer">
       </footer>
     </body>
 </html>
